--- a/templates/xstartup.j2
+++ b/templates/xstartup.j2
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 # start up session manager wtih the DISPLAY environment variable
 #XDG_DATA_DIRS=/usr/share/gnome:/usr/local/share:/usr/share:/var/lib/snapd/desktop
 #
